# SPView

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: client.hpp  data_queue.hpp  defs.hpp  gmsh.hpp  gmsh_view_handler.hpp  logger.hpp  spview.hpp  utils.hpp
src/: CMakeLists.txt  client.cpp  data_queue.cpp  gmsh.cpp  gmsh_view_handler.cpp  main.cpp  spview.cpp
